# python-hyperway

./: .gitignore  MANIFEST.in  PACKAGE_VERIFICATION_v1.0.0.md  README.md  RELEASE_NOTES_v1.0.0.md  SONARQUBE_SETUP.md  activate.bat  generate_coverage.sh  pyproject.toml  quick_test.sh  quick_test_coverage.sh  replace_lambdas.py  setup.py  simplify_tests.py  sonar-project.properties  test.gv  tox.ini
.github/: GITHUB_WORKFLOW_SETUP.md  copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: python-publish.yml
docs/: SETUP_CHECKLIST.md  SONARCLOUD_VS_SONARQUBE.md  WORKFLOW_COMPLETE.md  dev-note-expand-performance.md  development.md  diagrams.tldr  future.md  graphviz-install.md  historical-lessons.md  info.html  kwargs-bubbling.md  lessons-learned.md  notes.md  sentinal.md  stepper.md  tools-migration-guide.md  topology.md  version-management.md
docs/future/: knuckles.md  readme.md  vector-directional-execitions.md
docs/issues/: 001-functional-return-sentinal.md
docs/logos/: logo.psd  v2-5.psd
docs/sonarqube/: QUICK_REFERENCE.md  SONARCLOUD_SIMPLE_SETUP.md  WORKFLOW_COMPLETE.md
docs/source/: conf.py  index.rst
renders/: chain_50_nodes.gv  intro-example.gv  loop_6_nodes.gv
scripts/: README.md  generate_coverage.sh  update_version.py
src/hyperway/: __init__.py  _version.py  edges.py  generator.py  ident.py  nodes.py  packer.py  reader.py  smoke_tests.py  stepper.py  tools.py  view.html  writer.py
src/hyperway/graph/: __init__.py  base.py  graph.py
tests/: test_condition.py  test_edges.py  test_generator.py  test_graph.py  test_ident.py  test_nodes.py  test_packer.py  test_reader.py  test_sentinal.py  test_stepper.py  test_stepper_advanced.py  test_tools.py  test_wire_func.py  test_writer.py  tiny_tools.py
workspace/: EXAMPLES_COMPARISON.md  NEW_EXAMPLES_QUICKREF.md  SONARCLOUD_REPORT.md  and-gate.py  and_gate.gv  arrows.py  bench_expand.py  bench_stepper_expand.py  chain_50_nodes.py  chain_50_nodes_README.md  connection-binding.py  double-split.py  edge_get_connection.py  fetch_sonarcloud_issues.py  full.gv  full.py  generate_markdown_report.py  hyperedge.py  instance-method-node.py  issues_checklist.txt  loop_6_nodes.py  loop_6_nodes_README.md  merge-node.py  order-of-operation.py  render-image.py  resize_images.py  run.py  run_2.gv  run_2.py  run_3.gv  run_3.py  run_5.py  run_6.py  sentinal.py  simple-one-to-two.py  simple.gv  simple_issues.py  sonarcloud_report.json  test_generic.sh  triple-split-2.py  (+4 more)
workspace/gates/: and-gate.py  nand-gate.py  not-gate.py  or-gate.py  xor-gate.py
